# face_recognition_with_facenet

./: Dockerfile  README.md  app.py  find_threshold.py  initialize.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: .gitignore  vectors.npy
face_recognition/: data_utils.py  inference.py  messages.py
