[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.9.7"
facenet-pytorch = "~2.5.3"
streamlit = "~1.23.1"
plotly = "~5.15.0"


[tool.poetry.group.dev.dependencies]
flake8 = "~5.0.3"
black = "~23.3.0"
isort = "~5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
